fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,7 @@ dd>em{font-weight: bold;}
 
     height: 600px;
 
-    overflow: scroll;
+    overflow: auto;
 
 	margin: 0 auto;
 
